# Jobs-analyzer

./: .gitignore  LICENSE.md  main.py  public_key.pem  pyproject.toml
module/: html_parser.py  llm_processing.py  scrapers.py
tests/: 01KGYJVAE492GXPAQASFXVQSQ3.html  01KGYJVAE4FA9Q162N2ECXXNPP.html  test_encryption.py  test_parser.py  test_scrp.py
utils/: encryption.py  logging.py
